test/expected/explain_enk.out
explain enum struct C x
        ^
9: error: "enum struct": enum classes must just use "enum"
